# relcode_diag_extension

./: .gitignore  CMakeLists.txt  README.md  clean_build.sh  make_build.sh
src/: coul_gen_cc_rel.f  coulcc.f  get_amp.f90  in_data_mod.f90  intrinsics_mod.f90  ionisation_mod.f90  logger.h  main.f90  output_data_mod.f90  perturbed_wavefunction_mod.f90  photons_mod.f90  types_mod.f90  utility_mod.f90
